# rcs

./: .gitignore  .gitmodules  10-synaptics.conf  20-trackpad.conf  NOTES.pdc  README.md  aur-pkglist  cdmrc  dvtm-w-status  gitconfig  govern  gvimrc  init.sh  newsbuter_config  pacman.conf  pentadactylrc  pkglist  profile  radeon_gc_off  rc.conf  rfswitch  screenrc  set_bg.sh  sshrc  status-line  sudoers  tmux.conf  toggletouchpad.sh  togglevga.sh  tyrs.cfg  userChrome.css  uzbl_config  vimrc  wmiirc  xbindkeysrc  xinitrc  xmodmap  xorg  zshrc
etc/: cdmrc  fstab  hostname  locale.conf  locale.gen  mkinitcpio.conf  pacman.conf  psd.conf  rc.conf  sldmrc  sudoers  tsocks.conf  vconsole.conf
home/user/: .XCompose  .Xresources  .asoundrc  .bashrc  .gitconfig  .gvimrc  .hgrc  .inputrc  .muttrc  .nethackrc  .pentadactylrc  .profile  .profile.cabal  .profile.mosml  .profile.opam  .profile.sbase  .profile.usul  .rtorrent.rc  .shkdrc  .sxhkdrc  .teledactylrc  .tinitrc  .vimperatorrc  .vimrc  .wezterm.lua  .xbindkeysrc  .xinitrc  .xkb  .xkb.hjkl  .zprofile  .zshrc  notes-on-acme.pdc  plumbing
home/user/.calcurse/: conf
home/user/.config/nvim/: init.vim
home/user/.config/xkb/rules/: evdev  evdev.xml
home/user/.config/xkb/symbols/: hjkl
home/user/.newsbeuter/: config
home/user/.ssh/: config
home/user/.surf/styles/: default.css
home/user/.wmii/: wmiirc
home/user/pkgs/dwm/: PKGBUILD  config.h
home/user/public_html/: Makefile  index.pdc  projects.pdc
pkgs/: aur-pkglist  dictionnaire_francais-5.5-sm+tb+fx.xpi  make.sh  pkglist  pkglist.full  pkglist.libreoffice  (+5 more)
(+71 files in other folders)
