export PATH=$HOME/.opam/bin:$HOME/.opam/4.00.1dev+friendlyerrors/bin:$HOME/.opam/system/bin:$PATH
export MANPATH=$HOME/.opam/4.00.1dev+friendlyerrors/man:$MANPATH
export OCAML_TOPLEVEL_PATH=$HOME/.opam/4.00.1dev+friendlyerrors/lib/toplevel
export CAML_LD_LIBRARY_PATH=$HOME/.opam/4.00.1dev+friendlyerrors/lib/stublibs:/usr/lib/ocaml/stublibs
